Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29770

qfiledialog right click Delete follows symlinks to delete the actual target, instead of the symlink itself

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.2
    • 4.8.2, 5.6.2, 5.9.1
    • None
    • Windows, Linux Mac
    • 5157c3e8bd78d31efea885d8e2d36e24f41a4a2f

    Description

      Enabling resolve symlinks for file dialog is good, it allows one to follow, navigate directories
      but when one is attempting to delete a symlink, instead of deleting the symlink, qfiledialog QFileDialogPrivate::_q_deleteCurrent() is deleting the target instead. this may be what the resolve symlink is expecting, but its not what users are expecting

      Expected behaviour would be to delete the symlink, not the target.

      If one turns off the follow symlink option in the _q_deleteCurrent() function [DontResolveSymlinks], one needs to deal with isDir() not knowing its a symlink and doing the wrong thing, and the file dialog display changes to show the "lnk" files while one has the Popup menu displayed deleting the symlink

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            warnold Wayne Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes